# MiniChess

./: .gitignore  CMakeLists.txt  README.md
include/: application.hpp  bishop.hpp  board.hpp  game.hpp  king.hpp  knight.hpp  pawn.hpp  piece.hpp  queen.hpp  rook.hpp  square.hpp
src/: application.cpp  bishop.cpp  board.cpp  game.cpp  king.cpp  knight.cpp  main.cpp  pawn.cpp  piece.cpp  queen.cpp  rook.cpp  square.cpp
